# scanf-like-rust-input

./: Cargo.toml
src/: lib.rs  main.rs
